--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,82 +1,102 @@
-/* You'll want to make the site responsive and nice looking here. Have fun!*/
+/*/*Universal Styling*/
 
-#wrapper {
-  text-align: left;
-  margin: 0px auto;
-  padding: 0px;
-  border:0;
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+    font-family: Helvetica;
+}
+
+html {
+  background-color: #F0F1CF;
+}
+
+#author{
+  position: absolute;
   width: 100%;
-  background: url("http://cdn.elegantthemes.com/blog/wp-content/uploads/2013/09/bg-6-full.jpg") repeat;
-  color:black;
-  font-size: 2em;
+  background-image: linear-gradient(135deg, #122a3e, #F2C164);
+  background-color: #122a3e;
+  color: #fff;
+  padding: 1em 0;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 1em;
+  top: 0;
+  margin: 0;
 }
 
-#side-a ul{
-  list-style-type:none;
+#cover {
+  width: 100%;
 }
 
-a {
-  color:black;
+#container {
+  width: 100%;
+  height: 17em;
+  text-align: center;
 }
 
-#header {
-  margin: 0 0 15px 0;
-  background: black;
-  color: white;
+.card {
+  display: inline-block;
+  width: 33%;
+  height: inherit;
+  vertical-align: top;
+  font-size: 4em;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: .4em;
+  word-wrap: break-word;
+  color: #fff;
 }
 
-#side-a {
-  float: left;
-  width: 15.625%;
+#about {
+  background-color: #5E778D;
 }
 
-#side-a li{
-  padding-top: 2.0833333%;
+#projects {
+  background-color: #DB4442;
 }
 
-#side-b {
-  float: right;
-  width: 15.625%;
+#blog {
+  background-color: #F2C164;
 }
 
-#content {
-  float: left;
-  width: 68%;
+footer {
+  background-image: linear-gradient(-135deg, #DB4442, #F2C164);
+  background-color: #DB4442;
+  color: #fff;
+  padding: 1em 0;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  text-align: center;
 }
 
-#footer {
-  clear: both;
-  background: #A2A2A2;
+#contact{
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: .4em;
+    padding-left: .4em;
 }
 
-@media screen and (max-width: 960px) {
-  #side-a {
-    display: block;
-    width: 100%;
-    text-align: center;
-  }
-
-  #side-a li {
-    display: inline;
-    text-align: center;
-  }
-
-  #content {
-    width: 100%;
-  }
-
-  #header {
-    font-size: .75em;
-    text-align: center;
-  }
-
-  #content p {
-    text-align: center;
-    margin-right: .5em;
-    margin-left: .5em;
-  }
-
-  img {
-    width: 100%;
-  }
+.contact-me {
+  list-style: none;
+  position: relative;
+  top: 1em;
+  text-transform: lowercase;
+  font-size: .7em;
+  font-weight: 300;
+  font-style: italic;
+  letter-spacing: .12em;
+  padding-left: .12em;
 }
+.contact-me li {
+  display: inline-block;
+  width: 49%;
+}
+
+
+/*#122a3e
+#5E778D
+#F0F1CF
+#F2C164
+#DB4442*/
