--- a/blog-posts/blog-stylesheet.css
+++ b/blog-posts/blog-stylesheet.css
@@ -25,6 +25,7 @@ a:hover {
 .header {
     background-image: linear-gradient(135deg, #122a3e, #F2C164);
     background-color: #122a3e;
+    width: 100%;
     color: #fff;
     padding: 1em 0;
     font-size: 1.5em;
@@ -38,26 +39,33 @@ a:hover {
     letter-spacing: .4em;
     padding-left: .4em;
 }
-
 .header #author{
-    text-transform: lowercase;
-    font-size: .7em;
-    font-weight: 300;
-    font-style: italic;
-    letter-spacing: .12em;
-    padding-left: .12em;
-}
+     text-transform: lowercase;
+     font-size: .7em;
+     font-weight: 300;
+     font-style: italic;
+     letter-spacing: .12em;
+     padding-left: .12em;
+ }
 
 #nav {
-  list-style-type: none;
-  margin: 0;
+   list-style-type: none;
+   margin: 0;
+ }
+
+ #nav li {
+   display: inline-block;
+   width: 30%;
+ }
+
+#nav a {
+  color: #fff;
+  padding: .4em;
 }
 
-#nav li {
-  display: inline-block;
-  width: 30%;
-}
-
+#nav a:hover {
+  background: #DB4442;
+  }
 
 
 /*Page Body Styling*/
@@ -69,6 +77,18 @@ a:hover {
   vertical-align: top;
   padding: 1em;
   width: 75%;
+}
+
+.content ul {
+  list-style: none;
+}
+.content li {
+  margin-top: .7em;
+}
+
+.content li a {
+  color: #333;
+  font-weight: 200;
 }
 
 .sidebar {
