--- a/blog-posts/blog-stylesheet.css
+++ b/blog-posts/blog-stylesheet.css
@@ -91,6 +91,16 @@ a:hover {
   font-weight: 200;
 }
 
+code {
+  padding: 0;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 3px
+}
+
 .sidebar {
   /*border: .4em solid #DB4442;*/
   background: #5E778D;
