--- a/blog-posts/blog-stylesheet.css
+++ b/blog-posts/blog-stylesheet.css
@@ -91,6 +91,12 @@ a:hover {
   font-weight: 200;
 }
 
+.content a {
+  font-weight: bold;
+  text-decoration: underline;
+  color: #333;
+}
+
 code {
   padding: 0;
   padding-top: 0.2em;
