write Week 6 Tech Blog

--- a/blog-posts/blog-stylesheet.css
+++ b/blog-posts/blog-stylesheet.css
@@ -97,7 +97,7 @@ a:hover {
   color: #333;
 }
 
-code {
+/*code {
   padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
@@ -105,7 +105,7 @@ code {
   font-size: 85%;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 3px
-}
+}*/
 
 .sidebar {
   /*border: .4em solid #DB4442;*/
