--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,15 @@ body {
   background-color: transparent;
 }
 
+.list-group{
+  .list-group-item, div{
+    color: #fff;
+    background-color: rgba(0,0,0,0.5);
+    padding: 10px 20px;
+  }
+
+}
+
 
 .footer {
   position: absolute;
@@ -51,10 +60,8 @@ body {
   color: #fff;
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-  .signature{
-    position: fixed;
-    bottom:0;
-    right:0;
-  }
+.signature{
+  position: fixed;
+  bottom:0;
+  right:0;
 }
